Update reflection accesses to Java 9 standard